# toobee

./: README.md  pyproject.toml  run.sh
changelog.d/: 20220901_001516_dylan.rst
src/: toobee.py
tests/: test_toobee.py
