[tool.poetry]
name = "toobee"
version = "0.1.0"
description = "Too bee or not too bee? A loyal bee would never have such thoughts."
authors = ["Dylan Ferris <dylan@psilly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
